# harness-scorecard

./: AGENTS.md  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: AGENTS.md  ci.yml  publish.yml
docs/: AGENTS.md  RELEASE.md  ROADMAP.md  claims-audit-design.md  codex-routing-facts.md  rubric.md
examples/: github-workflow.yml  harness-scorecard.toml
examples/redteam/: README.md
examples/redteam/claude-d1-credential-exposure/: ATTACK.md
examples/redteam/claude-d1-credential-exposure/vulnerable/: CLAUDE.md  settings.json
examples/redteam/claude-d4-inert-harddeny/: ATTACK.md
examples/redteam/claude-d4-inert-harddeny/guarded/: settings.json
examples/redteam/claude-d4-inert-harddeny/vulnerable/: settings.json
examples/redteam/claude-d4-inert-harddeny/vulnerable/rules/: sandboxing.md
examples/redteam/claude-d5-unprotected-config/: ATTACK.md
examples/redteam/claude-d5-unprotected-config/guarded/: settings.json
examples/redteam/claude-d5-unprotected-config/vulnerable/: settings.json
examples/redteam/codex-d1-env-secret-leak/: ATTACK.md
examples/redteam/codex-d1-env-secret-leak/guarded/: config.toml
examples/redteam/codex-d1-env-secret-leak/vulnerable/: config.toml
examples/redteam/codex-d4-full-access/: ATTACK.md
examples/redteam/codex-d4-full-access/vulnerable/: AGENTS.md  config.toml  hooks.json
examples/redteam/codex-d5-self-mutable/: ATTACK.md
examples/redteam/codex-d5-self-mutable/vulnerable/: config.toml  hooks.json
examples/redteam/codex-d7-routing/: ATTACK.md
examples/redteam/codex-d7-routing/guarded/: deep-analysis.config.toml
examples/redteam/codex-d7-routing/vulnerable/: config.toml
examples/sample-harness/: settings.json
src/harness_scorecard/: __init__.py  badge.py  caveats.py  claims.py  cli.py  codex_routing_facts.py  diff.py  discovery.py  discovery_codex.py  dispatch.py  explain.py  failure_modes.py  fleet.py  guard_extract.py  htmlreport.py  introspect.py  models.py  parsing.py  policy.py  redaction.py  report.py  sarif.py  scoring.py  summary.py
src/harness_scorecard/checks/: __init__.py  base.py  destructive_git.py  egress.py  observability.py  provenance.py  receipt_discipline.py  recovery.py  secret_protection.py  self_protection.py  subagent_isolation.py  tool_surface.py  verification.py
src/harness_scorecard/checks_codex/: __init__.py  destructive_git.py  egress.py  observability.py  provenance.py  recovery.py  routing.py  secret_protection.py  self_protection.py  subagent_isolation.py  tool_surface.py  verification.py
tests/: test_audit_fixes.py  test_badge.py  test_caveats.py  test_checks.py  test_checks_codex.py  test_checks_codex_d2d3.py  test_checks_codex_d6_d10.py  test_checks_egress.py  test_checks_observability.py  test_checks_provenance.py  test_checks_recovery.py  test_checks_self_protection.py  test_checks_subagent_isolation.py  test_checks_tool_surface.py  test_checks_verification.py  test_claims.py  test_cli.py  test_codex_routing.py  test_codex_routing_facts.py  test_diff.py  test_discovery.py  test_discovery_codex.py  test_discovery_robustness.py  test_dispatch.py  test_explain.py  test_fleet.py  test_guard_extract.py  test_htmlreport.py  test_introspect.py  test_models.py  test_policy.py  test_redaction.py  test_redteam_corpus.py  test_sarif.py  test_scoring.py  test_summary.py  test_unknown_status.py
tests/fixtures/codex_routing/contradictory/: config.toml
tests/fixtures/codex_routing/custom_provider/: config.toml
tests/fixtures/codex_routing/global_ultra/: config.toml
tests/fixtures/codex_routing/project_override/: config.toml
tests/fixtures/codex_routing/project_override/trusted-app/.codex/: config.toml
tests/fixtures/codex_routing/prose_only/: AGENTS.md  config.toml
tests/fixtures/codex_routing/safe_exception/: config.toml
tests/fixtures/codex_routing/unsupported_marker/: config.toml
tests/fixtures/codex_strong/: AGENTS.md  config.toml  hooks.json
tests/fixtures/codex_strong/agents/: worker.toml
tests/fixtures/codex_weak/: config.toml
tests/fixtures/strong_harness/: CLAUDE.md  settings.json
tests/fixtures/strong_harness/agents/: code-reviewer.md
tests/fixtures/strong_harness/hooks/: git-safety.sh
tests/fixtures/strong_harness/rules/: sandboxing.md
tests/fixtures/strong_harness/skills/verify/: SKILL.md
tests/fixtures/weak_harness/: settings.json
